<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:gravity="center_vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/btnAddPlace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_cyan_outline"
                android:gravity="center_vertical"
                android:paddingLeft="8dp"
                android:paddingTop="5dp"
                android:paddingRight="8dp"
                android:paddingBottom="5dp"
                android:text="@string/action_add_place"
                android:textColor="@android:color/black" />

        </LinearLayout>

        <RadioGroup
            android:id="@+id/radioUnitType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_cyan_outline"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbCelsiusUnit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/toggle_bg"
                android:button="@null"
                android:checked="true"
                android:gravity="center"
                android:paddingLeft="8dp"
                android:paddingTop="5dp"
                android:paddingRight="8dp"
                android:paddingBottom="5dp"
                android:text="@string/temp_celsius_unit"
                android:textColor="@android:color/white" />

            <RadioButton
                android:id="@+id/rbFahrenheitUnit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/toggle_bg"
                android:button="@null"
                android:gravity="center"
                android:paddingLeft="8dp"
                android:paddingTop="5dp"
                android:paddingRight="8dp"
                android:paddingBottom="5dp"
                android:text="@string/temp_fahrenheit_unit" />
        </RadioGroup>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="10dp">

        <include layout="@layout/view_list" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</LinearLayout>
